--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.3",
     "ng-otp-input": "^1.9.3",
+    "ngx-toastr": "^18.0.0",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
