--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ng-otp-input": "^1.9.3",
     "ngx-toastr": "^18.0.0",
     "ngx-ui-loader": "^13.0.0",
+    "razorpay": "^2.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
